# corrozy

./: AUDIT.MD  Cargo.toml  LICENSE  README.md  roadmap.md  rustfmt.toml
corrozy-cli/: Cargo.toml
corrozy-cli/src/: main.rs
corrozy-core/: Cargo.toml
corrozy-core/grammar/: corrozy.pest
corrozy-core/src/: config.rs  lib.rs  transpiler.rs
corrozy-core/src/codegen/: generator.rs  mod.rs
corrozy-core/src/codegen/syntax/: block.rs  closure.rs  declaration.rs  exp_statement.rs  expression.rs  function.rs  if_else.rs  mod.rs  output.rs  variables.rs
corrozy-core/src/language/: mod.rs
corrozy-core/src/language/ast/: main.rs
corrozy-core/src/language/features/: mod.rs
corrozy-core/src/language/parser/: main.rs
corrozy-core/src/parser/: ast.rs  common.rs  declaration.rs  expression.rs  functions.rs  if_else.rs  mod.rs  parser.rs  statement.rs
corrozy-core/src/utils/: test_utils.rs
grammar/: corrozy.pest
php-example/src/: main.crz
php-example/src/conditional/: ifelse.crz
php-example/src/function/: adder.crz  alternative.crz
php-example/src/literal/: string_types.crz
php-example/src/variable/: const.crz  var.crz
src/: main.rs
src/codegen/: generator.rs  mod.rs  output.rs  variables.rs
src/parser/: ast.rs  parser.rs
tests/: Cargo.toml
tests/integration/variables/app/: corrozy.toml
tests/unit/: function.rs  mod.rs  prints.rs  variable.rs
tests/utils/: test_utils.rs
vscode-extension/: corrozy-language-support-0.0.1.vsix  language-configuration.json  package.json
vscode-extension/syntaxes/: corrozy.tmGrammar.json
(+33 files in other folders)
